[package]
name = "workdays"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Waits <steve@waits.net>"]
description = "A Rust library for computing work days and handling work calendars, inspired by the WORKDAY function in Excel."
license = "MIT"
repository = "https://github.com/swaits/workdays"
documentation = "https://docs.rs/workdays"
readme = "README.md"
keywords = ["calendar", "workday", "date", "business", "excel"]
categories = ["date-and-time", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
